# pydantic_car

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml
car/: car.py  example.py  gas_tank.py  redis_package_example.py
