[tool.poetry]
name = "pydantic_car"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis-om = "^0.0.17"
pydantic = {extras = ["email"], version = "^1.9.0"}
mypy = "^0.931"
redis = "^4.1.3"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
